# mistral-ocr

./: README.md  main.py  mistral_ocr.py  pyproject.toml
